Mix of small fixes for asciidoc and add toc script

--- a/blog/config/application.properties
+++ b/blog/config/application.properties
@@ -2,7 +2,6 @@ quarkus.web-bundler.dependencies.auto-import=all
 #quarkus.log.category."io.quarkiverse.roq.frontmatter.deployment".level=DEBUG
 #quarkus.log.category."io.quarkiverse.roq.generator".level=DEBUG
 quarkus.default-locale=en
-quarkus.asciidoctorj.attributes.icons=font
-quarkus.asciidoctorj.attributes.source-highlighter=highlight.js
+quarkus.asciidoc.attributes.icons=font
+quarkus.asciidoc.attributes.source-highlighter=highlight.js
 site.slugify-files=false
-quarkus.asciidoctorj.templates-dir=content/docs/_layouts
