--- a/blog/data/events.yml
+++ b/blog/data/events.yml
@@ -1,3 +1,7 @@
+- title: "Roq: Create your static site with superpowers – fun, powerful, and easy to maintain!"
+  description: "Andy Damevin talks about Quarkus Roq at Riviera Dev."
+  date: "2025-07-09"
+  link: https://rivieradev.fr/session/672
 - title: "Quarkus Insight - What is Quarkus Roq?"
   description: "Andy Damevin, Matheus Cruz and Melloware join us to discuss Quarkus Roq, which includes tooling for generating a static website with Quarkus."
   date: "2024-11-11"
