--- a/roq-plugin/lunr/runtime/pom.xml
+++ b/roq-plugin/lunr/runtime/pom.xml
@@ -10,11 +10,20 @@
     <artifactId>quarkus-roq-plugin-lunr</artifactId>
     <name>Quarkus Roq - Plugin - Lunr - Runtime</name>
 
+    <properties>
+        <jsoup.version>1.20.1</jsoup.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>io.quarkiverse.roq</groupId>
             <artifactId>quarkus-roq-frontmatter</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>${jsoup.version}</version>
         </dependency>
     </dependencies>
 
