--- a/blog/config/application.properties
+++ b/blog/config/application.properties
@@ -5,3 +5,4 @@ quarkus.default-locale=en
 quarkus.asciidoc.attributes.icons=font
 quarkus.asciidoc.attributes.source-highlighter=highlight.js
 site.slugify-files=false
+%dev.site.draft=true
