--- a/roq-plugin/asciidoc-jruby/runtime/pom.xml
+++ b/roq-plugin/asciidoc-jruby/runtime/pom.xml
@@ -13,7 +13,7 @@
     <dependencies>
         <dependency>
             <groupId>io.quarkiverse.roq</groupId>
-            <artifactId>quarkus-roq-frontmatter</artifactId>
+            <artifactId>quarkus-roq-plugin-asciidoc-common</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
