--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <maven.compiler.release>17</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <quarkus.version>3.23.0</quarkus.version>
+        <quarkus.version>999-SNAPSHOT</quarkus.version>
         <assertj.version>3.27.4</assertj.version>
         <quarkus-qute-web.version>3.4.4</quarkus-qute-web.version>
         <asciidoctorj.version>3.0.0</asciidoctorj.version>
