Allow indexing with attachements at different level

--- a/blog/config/application.properties
+++ b/blog/config/application.properties
@@ -1,5 +1,5 @@
 quarkus.web-bundler.dependencies.auto-import=all
-#quarkus.log.category."io.quarkiverse.roq.frontmatter.deployment".level=DEBUG
+quarkus.log.category."io.quarkiverse.roq.frontmatter.deployment".level=DEBUG
 #quarkus.log.category."io.quarkiverse.roq.generator".level=DEBUG
 quarkus.default-locale=en
 quarkus.asciidoc.attributes.icons=font
