--- a/roq-frontmatter/runtime/src/main/resources/application.properties
+++ b/roq-frontmatter/runtime/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-quarkus.qute.suffixes=qute.html,qute.txt,html,xhtml,htm,txt,json,yaml,yml,xml
+quarkus.qute.suffixes=html,xhtml,htm,json,yaml,yml,xml
