--- a/roq-frontmatter/deployment/pom.xml
+++ b/roq-frontmatter/deployment/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>quarkus-arc-deployment</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.quarkiverse.web-bundler</groupId>
+            <artifactId>quarkus-web-bundler-deployment</artifactId>
+            <version>${quarkus-web-bundler.version}</version>
+        </dependency>
+        <dependency>
             <groupId>io.quarkiverse.roq</groupId>
             <artifactId>quarkus-roq-common-deployment</artifactId>
             <version>${project.version}</version>
