added bubble and float menu
Signed-off-by: Erik Jan de Wit <erikjan.dewit@gmail.com>

--- a/roq-generator/deployment/pom.xml
+++ b/roq-generator/deployment/pom.xml
@@ -103,6 +103,21 @@
                         <artifactId>markdown</artifactId>
                         <version>3.13.0</version>
                     </dependency>
+                    <dependency>
+                        <groupId>org.mvnpm.at.tiptap</groupId>
+                        <artifactId>extension-image</artifactId>
+                        <version>3.12.1</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.mvnpm.at.tiptap</groupId>
+                        <artifactId>extension-floating-menu</artifactId>
+                        <version>3.12.1</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.mvnpm.at.tiptap</groupId>
+                        <artifactId>extension-bubble-menu</artifactId>
+                        <version>3.12.1</version>
+                    </dependency>
                     <!-- this can be removed when we have transitive dependencies -->
                     <dependency>
                         <groupId>org.mvnpm.at.tiptap</groupId>
@@ -263,6 +278,26 @@
                         <groupId>org.mvnpm</groupId>
                         <artifactId>marked</artifactId>
                         <version>15.0.12</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.mvnpm.at.floating-ui</groupId>
+                        <artifactId>dom</artifactId>
+                        <version>1.7.4</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.mvnpm.at.floating-ui</groupId>
+                        <artifactId>utils</artifactId>
+                        <version>0.2.10</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.mvnpm.at.floating-ui</groupId>
+                        <artifactId>core</artifactId>
+                        <version>1.7.3</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.mvnpm</groupId>
+                        <artifactId>prosemirror-tables</artifactId>
+                        <version>1.8.3</version>
                     </dependency>
                 </dependencies>
             </plugin>
