moved into separate extension
Signed-off-by: Erik Jan de Wit <erikjan.dewit@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>roq-common</module>
         <module>roq-generator</module>
+        <module>roq-editor</module>
         <module>roq-data</module>
         <module>roq-frontmatter</module>
         <module>roq</module>
